# d_series_parser

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: main.yml
d_series_parser/: __version__.py  clustering.py  d_stability_parser.py
tests/: test_clustering.py  test_d_stabilty_parser.py  test_utils.py
tests/test_input/: multipolygon.pickle  polygons_d_stability.pkl  test.pickle
tests/test_models/: soil_type_from_IC.py
