[metadata]
name = d_series_parser
version = attr: d_series_parser.__version__
author = attr: d_series_parser.__author__
description = d series parser of the datafusiontools package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages =
    d_series_parser
include_package_data = True
install_requires =
    numpy>=1.22
    matplotlib>=3.5
    scipy>=1.11.3
    pykrige>=1.7.0
    scikit-learn>=1.3.1
    pyshp>=2.3.1
    shapely>=2.0.1
    core @ git+https://github.com/DataFusionTools/core
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    libpysal>=4.8.0
    d-geolib>=1.3.3
    spatial_utils @ git+https://github.com/DataFusionTools/spatial_utils
    interpolation @ git+https://github.com/DataFusionTools/interpolation
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
